@@ -1,4 +1,3 @@
-// src/main/java/dew/main/AlumnoJson.java
 package dew.main;
 
 import com.google.gson.Gson;
@@ -12,6 +11,18 @@ import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.Base64;
 
+/**
+ * Clase AlumnoJson:
+ * -----------------
+ * Este servlet atiende peticiones GET a la ruta "/alumnoJson". Su comportamiento es:
+ *   1) Verificar que exista una sesión válida con apiKey y sessionCookie. Si no, devuelve 401.
+ *   2) Obtener el parámetro "dni" de la petición y cargar el objeto Alumno correspondiente (sin foto).
+ *   3) Construir la ruta relativa dentro del contexto "/img/{dni}.webp" para buscar la imagen del alumno.
+ *      - Con getRealPath(...) se convierte esa ruta en la ruta absoluta del sistema de archivos.
+ *      - Si existe el archivo, se lee, se codifica en Base64 y se asigna a alumno.foto; si no, foto queda nulo.
+ *   4) Establecer asignaturas en null para no enviarlas por JSON.
+ *   5) Serializar el objeto Alumno (incluyendo la foto en Base64 si la hubo) a JSON y devolverlo como aplicación/json.
+ */
 @WebServlet("/alumnoJson")
 public class AlumnoJson extends HttpServlet {
 
@@ -19,40 +30,38 @@ public class AlumnoJson extends HttpServlet {
   protected void doGet(HttpServletRequest req, HttpServletResponse resp)
       throws ServletException, IOException {
 
-    // 1) Comprobar autenticación
+    // 1) Comprobar autenticación: apiKey y sessionCookie en sesión
     if (!checkAuthentication(req, resp)) {
       return;
     }
 
     HttpSession session = req.getSession(false);
+    // Obtener el parámetro "dni" de la URL
     String dniParam = req.getParameter("dni");
-    // 2) Obtener el objeto Alumno ya rellenado (sin foto aún)
+
+    // 2) Recuperar el objeto Alumno (sin foto) desde el servicio
     Alumno alumno = AlumnoService.fetchOne(getServletContext(), session, dniParam);
-    
-    //No se debe enviar las asignaturas por json
+
+    // No enviar las asignaturas en la respuesta JSON
     alumno.setAsignaturas(null);
 
-    // 3) Cargar la imagen física desde /webapp/img/<dni>.webp
+    // 3) Cargar la imagen física desde la ruta de contexto "/img/{dni}.webp"
     String relativePath = "/img/" + dniParam + ".webp";
-    String absolutePath = req.getServletContext().getRealPath(relativePath);
-
-    File imgFile = new File(absolutePath);
-    if (imgFile.exists()) {
-      try {
-        byte[] bytes = Files.readAllBytes(Paths.get(absolutePath));
-        // Codificar a Base64
-        String base64 = Base64.getEncoder().encodeToString(bytes);
-        alumno.setFoto(base64);
-      } catch (IOException e) {
-        // Si no podemos leerla, dejamos foto = null
+    try (InputStream is = req.getServletContext().getResourceAsStream(relativePath)) {
+        if (is != null) {
+            // Leemos todos los bytes del InputStream
+            byte[] bytes = is.readAllBytes();
+            String base64 = Base64.getEncoder().encodeToString(bytes);
+            alumno.setFoto(base64);
+        } else {
+            // Si no existe el recurso en /img/{dni}.webp
+            alumno.setFoto(null);
+        }
+    } catch (IOException e) {
         alumno.setFoto(null);
-      }
-    } else {
-      // Si no existe el archivo, dejamos foto nula (o una cadena vacía)
-      alumno.setFoto(null);
     }
 
-    // 4) Serializar a JSON y devolver
+    // 4) Serializar el objeto Alumno a JSON y devolverlo
     resp.setContentType("application/json;charset=UTF-8");
     resp.setCharacterEncoding("UTF-8");
     Gson gson = new Gson();
@@ -60,7 +69,9 @@ public class AlumnoJson extends HttpServlet {
     resp.getWriter().write(jsonOut);
   }
 
-  /** Envía 401 si no hay sesión o apiKey / sessionCookie faltante */
+  /**
+   * Envía 401 si no hay sesión o faltan apiKey / sessionCookie en HttpSession
+   */
   private boolean checkAuthentication(HttpServletRequest req, HttpServletResponse resp)
       throws IOException {
     HttpSession session = req.getSession(false);
